# tfg-inf-code

./: README.md
Docker/LEDE SDK/: Dockerfile
Docker/P2ABCE/idemix-3.0.36-binaries/: Readme.txt
IoT smart card toolkit/: CMakeLists.txt  README.md  Toolchain-omega2-mipsel.cmake
IoT smart card toolkit/util_sc/: BIOSC.c  CMakeLists.txt
IoT smart card toolkit/util_sc/p2abc_iot_toolkit_include/: error_codes.h  macrologger.h
IoT smart card toolkit/util_sc/p2abc_iot_toolkit_include/smartcard_common/: APDU_handler.h  APDU_types.h  abc4T_types.h  defs_consts.h  defs_errs.h  defs_ins.h  defs_types.h  global_vars.h  m_adapted_API.h  subroutines.h
IoT smart card toolkit/util_sc/p2abc_iot_toolkit_include/smartcard_external_utilities/: arithmetic_implementation_v1.h  base64.h  cJSON.h  cryptodev-AES128.h  cryptodev-SHA256.h  cryptodev.h  mini-gmp.h  tiny-SHA256.h
IoT smart card toolkit/util_sc/p2abc_iot_toolkit_include/smartcard_utils_interface/: APDU_IO_util.h  arithmetic_util.h  crypto_util.h  serialize_util.h  system_funcs.h
IoT smart card toolkit/util_sc/p2abc_iot_toolkit_src/smartcard_common/: APDU_handler.c  global_vars.c  m_adapted_API.c  subroutines.c
IoT smart card toolkit/util_sc/p2abc_iot_toolkit_src/smartcard_external_utilities/: arithmetic_implementation_v1.c  cJSON.c  cryptodev-AES128.c  cryptodev-SHA256.c  mini-gmp.c  tiny-AES128.c  tiny-SHA256.c
IoT smart card toolkit/util_sc/p2abc_iot_toolkit_src/smartcard_utils_interface/: APDU_IO_util.c  arithmetic_util.c  crypto_util.c  serialize_util.c  system_funcs.c
IoT smart card toolkit/util_sc_tests/: CMakeLists.txt
IoT smart card toolkit/util_sc_tests/apdu_tests/: CMakeLists.txt  handle_APDU_tests.cpp
IoT smart card toolkit/util_sc_tests/basic_tests/: CMakeLists.txt  arithmetic_util_tests.cpp  crypto_util_tests.cpp  m_adapted_API_tests.cpp  modular_arith_tests.cpp  random_numbers_check.cpp  subroutines_tests.cpp
P2ABCE/: .gitignore
P2ABCE/Code/core-abce/abce-services/: initIoTscCurl.sh  justDoIt.sh  setupBeforeCreateSmartcard.sh  setupTutorial.sh  startServices.tabs  tutorial.sh
P2ABCE/Code/core-abce/abce-services/tutorial-PoC/Omega2/: scriptOmega2.sh  setupOmega2.sh
P2ABCE/Code/java-ui-cloud/: .gitignore  add_copyright.sh  pom.xml
P2ABCE/Code/java-ui-cloud/eu.abc4trust.ri.ui.user/: build.properties  eu.abc4trust.ri.ui.user.launch  plugin.properties  plugin.xml  plugin_sv.properties  runFromEclipse.target
P2ABCE/Code/java-ui-cloud/eu.abc4trust.ri.ui.user.feature/: feature.xml
P2ABCE/Code/java-ui/eu.abc4trust.ri.ui.user/: plugin.properties  plugin.xml  plugin_sv.properties  runFromEclipse.target
P2ABCE/Code/java-ui/eu.abc4trust.ri.ui.user.feature/: feature.xml
P2ABCE/Code/java-ui/firefox-extension/extension/: chrome.manifest  install.rdf
P2ABCE/Code/java-ui/ie-active-x/: ABC4TrustActiveX.sln
P2ABCE/Code/java-ui/ie-active-x/ABC4TrustActiveX/: ABC4TrustActiveX.cs  ABC4TrustActiveX.csproj  ChangePinForm.Designer.cs  ChangePinForm.cs  ExtendedWebBrowser.cs  IObjectSafety.cs  IOleCommandTarget.cs  PinForm.Designer.cs  PinForm.cs  PinForm.da.resx  PinForm.resx  PinForm.sv.resx  ReturObject.cs  ToolsForm.Designer.cs  ToolsForm.cs  ToolsForm.da.resx  ToolsForm.resx  ToolsForm.sv.resx  UnlockCardForm.Designer.cs  UnlockCardForm.cs  UnlockCardForm.resx  WebForm.Designer.cs  WebForm.cs
P2ABCE/Code/java-ui/windows-installer/: abc4trust.nsis
P2ABCE/Code/java-ui/windows-installer/license/: Identity Mixer License 1.2.txt
P2ABCE/Code/java-ui/windows-tray-app/include/: abcetray.rc
P2ABCE/Code/uprove-java-binding/ABC4Trust-UProve_dotNET_WebServiceServer/: ABC4Trust-UProve.sln
P2ABCE/Code/uprove-java-binding/ABC4Trust-UProve_dotNET_WebServiceServer/ABC4Trust-UProve/: ABC4Trust-UProve.csproj  AbcTimer.cs  ConvertUtils.cs  DebugUProveUtils.cs  DeviceManager.cs  FlatWsdl.cs  FlatWsdlServiceHost.cs  FlatWsdlServiceHostFactory.cs  HashFunction.cs  Interface.cs  LoggerSetup.cs  Program.cs  README.txt  SecurityLevelUtils.cs  ServiceImpl.cs  SmartCardDevice.cs  SmartCardParams.cs  StaticDefine.cs  app.config
P2ABCE/Code/uprove-java-binding/ABC4Trust-UProve_dotNet_UnitTest/UProve_ABC4Trust_unitTest/: BlobStoreTest.cs  HardwareSmartCardTest.cs  LoggerUtils.cs  SmartCardTest.cs  UProve_ABC4Trust_unitTest.csproj  UProve_ABC4Trust_unitTest.sln  app.config  uproveTests.cs
P2ABCE/Code/uprove-java-binding/smartcard/ABC4TrustSmartCard/: ABC4TrustSmartCard.sln
P2ABCE/Code/uprove-java-binding/smartcard/ABC4TrustSmartCardUI/: ABC4TrustSmartCardUI.sln
P2ABCE/Code/uprove-java-binding/smartcard/pssc-sharp/: pcsc-sharp.sln  version.txt
P2ABCE/P2ABC Docker env/: Dockerfile
Scripts/: testBIOSC.py
Scripts/distributed-PoC/Omega2/tutorial-resources/: presentationPolicyAlternatives.xml
Scripts/tests/: IoTtest.sh  setupTest.sh
(+305 files in other folders)
